style.css
body{
	display:block;
	padding: 0;
	margin: 0;
	height:100%;
	width:100%;
	text-align:center;

	background:#F2F2F0;

	font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
	font-weight: 400;

	color:#555;
}


.hShadow{
	background: -webkit-linear-gradient( #AAA , #FAF2F0); /* For Safari 5.1 to 6.0 */
  background: -o-linear-gradient( #AAA, #F2F2F0); /* For Opera 11.1 to 12.0 */
  background: -moz-linear-gradient( #AAA, #F2F2F0); /* For Firefox 3.6 to 15 */
  background: linear-gradient( #AAA , #F2F2F0); /* Standard syntax */

  height:20px;
}

.meta{
	width:50%;
	margin:0 auto;

	font-size:18pt;
	text-align:justify;

}

.circle{
	margin:30px auto;
	display:block;
	width: 30%;
	min-width:600px;

	border-radius:100%;
	font-size:20px;
	text-align:center;

	overflow: hidden;

	background: #FFF url('Photo.jpg') top center no-repeat;
	background-size: auto 75%;
}

.circle:before{
	content: "";
	display: block;
	padding-top: calc(100% - 35%);
}
.part{
	display:block;
	width:100%;
	padding-bottom:15%;
	background: #00CC99;
}

.bubbles{
	width:100%;
	margin:0 auto;
}

.bubble{
	margin-right: 10px;

	position: relative;
}

.bubble, .subbubble{
	width:50px;
	height:50px;
	display:inline-block;
	/*background: #555;*/
	background: no-repeat;
	background-size: 100%;
}
.bubble:last{
	margin-right: 0;
}

.bubble span{
	display: block;
	transition-duration: 0.2s;
	transition-property: opacity;
	position:absolute;
}


.btnh{
	opacity: 0;
}
.btnh:hover{
	opacity: 1;
}


.github{
	background-image: url('img/gh.png');
}

.githubh{
	background-image: url('img/ghh.png');
}

.en{
	background-image: url('img/en.png');
}

.fr{
	background-image: url('img/fr.png');
}

.cg{
	background-image: url('img/cg.png');
}

.in{
	background-image: url('img/in.png');
}

.enh{
	background-image: url('img/enh.png');
}

.frh{
	background-image: url('img/frh.png');
}

.cgh{
	background-image: url('img/cgh.png');
}

.inh{
	background-image: url('img/inh.png');
}

h1{
	white-space: nowrap;
	margin-top:40px;
	padding-top:5px;

	font-weight: 400;
	color:#333;
}

.shadow {
  -moz-box-shadow:    3px 3px 5px 6px #ccc;
  -webkit-box-shadow: 3px 3px 5px 6px #ccc;
  box-shadow:         3px 3px 5px 6px #ccc;
}

a, a:hover, a:visited{
	color:#555;
}

